Added OpenLayers default editing controls

--- a/resources/private/open-layers/lupapiste.cfg
+++ b/resources/private/open-layers/lupapiste.cfg
@@ -1,12 +1,12 @@
 # Usage:
-# - Download OpenLayers source code: http://openlayers.org/download/OpenLayers-2.13.zip
-#    * Extract OpenLayers-2.13 to some temp directory
+# - Download OpenLayers source code
+#    * http://github.com/openlayers/openlayers/releases/download/release-2.13.1/OpenLayers-2.13.1.zip
+#    * Extract OpenLayers-2.13.1 to some temp directory
 # - Download Closure Compiler: http://dl.google.com/closure-compiler/compiler-latest.zip
-#    * Rename extracted compiler.jar to closure-compiler.jar and move into OpenLayers-2.13/tools
-# - Copy this file into OpenLayers-2.13/build
-# - Copy this file (lupapiste.cfg) into OpenLayers-2.13/build
-# - cd OpenLayers-2.13/build;
-#   python build.py -c closure lupapiste openlayers-2.13.min.lupapiste.js
+#    * Rename extracted compiler.jar to closure-compiler.jar and move into OpenLayers-2.13.1/tools
+# - Copy this file (lupapiste.cfg) into OpenLayers-2.13.1/build
+# - cd OpenLayers-2.13.1/build;
+#   python build.py -c closure lupapiste openlayers-2.13.1.min.lupapiste.js
 
 [first]
 
@@ -25,6 +25,13 @@ OpenLayers/Control/Zoom.js
 OpenLayers/Control/Navigation.js
 OpenLayers/Control/TouchNavigation.js
 OpenLayers/Control/SelectFeature.js
+OpenLayers/Control/Panel.js
+OpenLayers/Control/Navigation.js
+OpenLayers/Control/DrawFeature.js
+OpenLayers/Handler/Point.js
+OpenLayers/Handler/Path.js
+OpenLayers/Handler/Polygon.js
+OpenLayers/Handler/RegularPolygon.js
 OpenLayers/Format/Vector.js
 OpenLayers/Renderer/SVG.js
 OpenLayers/Renderer/Canvas.js
