Added SSL configuration options and documentation

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -9,8 +9,18 @@ toj.host                http://localhost:8010
 
 mongodb.servers.0.host  localhost
 mongodb.servers.0.port  27017
-#mongodb.credentials.username     
-#mongodb.credentials.password     
+#mongodb.credentials.username
+#mongodb.credentials.password
+
+# For local Vetuma testing. Should be false (or not set) in other environments.
+ssl.enabled               true
+ssl.ssl-port              8443
+# Local development environmen environment only: start HTTPS listener
+# using given keystore and passowrd.
+ssl.keystore              ./keystore
+# You should not store passwords in clear text.
+# See test/lupapalvelu/nested.properties for an example of encrypted properties.
+ssl.key-password          lupapiste
 
 geoserver.host            http://localhost
 
@@ -19,19 +29,19 @@ libreoffice.port          8001
 
 redirect-after-logout     /
 
-nls.raster.username       
-nls.raster.password       
-nls.maasto.username       
-nls.maasto.password       
-nls.ktjkii.username       
-nls.ktjkii.password       
-wmts.raster.username      
-wmts.raster.password      
+nls.raster.username
+nls.raster.password
+nls.maasto.username
+nls.maasto.password
+nls.ktjkii.username
+nls.ktjkii.password
+wmts.raster.username
+wmts.raster.password
 
 # vetuma
-vetuma.ap             
-vetuma.rcvid          
-vetuma.key            
+#vetuma.ap
+#vetuma.rcvid
+#vetuma.key
 vetuma.url            https://testitunnistus.suomi.fi/VETUMALogin/app
 
 # dummy key "aaaaaaaaaaaaaaaa", actual key is set by Chef
