Make sure Postal has timeouts set (5min == 300000ms)

--- a/resources/lupapiste.properties
+++ b/resources/lupapiste.properties
@@ -16,6 +16,8 @@ mongodb.dbname          lupapiste
 email.host          localhost
 email.from          Lupapiste <no-reply@lupapiste.fi>
 email.reply-to      Lupapiste <no-reply@lupapiste.fi>
+email.connectiontimeout 300000
+email.timeout           300000
 
 cookie.secure       true
 cookie.http-only    true
