Added PDF-A conversion client, feature disabled by default. Removed pdfa-core which is not in separate project.

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -24,8 +24,8 @@ ssl.key-password          lupapiste
 
 geoserver.host            http://localhost
 
-libreoffice.host          localhost
-libreoffice.port          8001
+# Blank value disables libreoffice conversion
+libreoffice.url          http://localhost:8001
 
 redirect-after-logout     /
 
