--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -24,8 +24,8 @@ ssl.key-password          lupapiste
 
 geoserver.host            http://localhost
 
-# Blank value disables libreoffice conversion
-libreoffice.url          http://localhost:8001
+libreoffice.host          localhost
+libreoffice.port          8001
 
 redirect-after-logout     /
 
