Added PDF-A conversion client, feature disabled by default. Removed pdfa-core which is not in separate project.

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -24,8 +24,9 @@ ssl.key-password          lupapiste
 
 geoserver.host            http://localhost
 
-libreoffice.host          localhost
-libreoffice.port          8001
+# Blank url disables the feature
+libreoffice.url          http://localhost:8001
+
 
 redirect-after-logout     /
 
