Disable libreoffice.url property for now

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -25,7 +25,7 @@ ssl.key-password          lupapiste
 geoserver.host            http://localhost
 
 # Blank url disables the feature
-libreoffice.url          http://localhost:8001
+#libreoffice.url          http://localhost:8001
 
 
 redirect-after-logout     /
