redirect to correct language page after logout

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -28,7 +28,8 @@ geoserver.host            http://localhost
 #libreoffice.url          http://localhost:8001
 
 
-redirect-after-logout     /
+redirect-after-logout.fi     /
+redirect-after-logout.sv     /sv
 
 nls.raster.username
 nls.raster.password
