--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -5,6 +5,9 @@ email.skip-mx-validation  true
 frontpage.fi          /app/fi/welcome
 frontpage.sv          /app/sv/welcome
 
+redirect-after-logout.fi /app/fi/welcome
+redirect-after-logout.sv /app/sv/welcome
+
 # Configuration for MML xml interfaces
 # ${kohdetunnus} is replaced with kohdetunnus
 mml.yhteystiedot.uri-template    http://localhost:8000/dev/mml/yhteystiedot-LU.xml
