featureflag for louhipalvelin

--- a/resources/local.properties
+++ b/resources/local.properties
@@ -62,6 +62,7 @@ feature.tiedonohjaus                true
 feature.arkistointi                 true
 feature.preview                     true
 feature.rakennusjateilmoitus        true
+feature.louhipalvelin               true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
