--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -20,3 +20,4 @@ feature.tiedonohjaus                false
 feature.arkistointi                 false
 feature.preview                     false
 feature.rakennusjateilmoitus        false
+feature.louhipalvelin               false
