--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -23,6 +23,7 @@ feature.tiedonohjaus                true
 feature.arkistointi                 true
 feature.preview                     true
 feature.rakennusjateilmoitus        true
+feature.louhipalvelin               true
 
 # dev features
 feature.dummy-krysp                 true
