--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -46,6 +46,7 @@ feature.tiedonohjaus                true
 feature.arkistointi                 true
 feature.preview                     true
 feature.rakennusjateilmoitus        true
+feature.louhipalvelin               true
 
 # for delicious live coding
 feature.nrepl                       true
