--- a/resources/test.properties
+++ b/resources/test.properties
@@ -20,6 +20,7 @@ feature.tiedonohjaus                true
 feature.arkistointi                 true
 feature.preview                     true
 feature.rakennusjateilmoitus        true
+feature.louhipalvelin               true
 
 # for delicious live coding
 feature.nrepl                       true
