added dummy key

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -50,5 +50,7 @@ vetuma.url            https://testitunnistus.suomi.fi/VETUMALogin/app
 onnistuu.crypto-key   YWFhYWFhYWFhYWFhYWFhYQ==
 # dummy key "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb", actual key is set by Chef
 backing-system.crypto-key YmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmI=
+# dummy key "cccccccccccccccccccccccccccccccc", actual key is set by Chef
+sso.basic-auth.crypto-key Y2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2M=
 
 technical-contact         root@localhost
