Added PDF-A conversion for Katselmus (OK)

--- a/resources/test.properties
+++ b/resources/test.properties
@@ -24,3 +24,4 @@ feature.louhipalvelin               true
 feature.nrepl                       true
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
+feature.tasks-pdf-export            false
