--- a/resources/local.properties
+++ b/resources/local.properties
@@ -71,3 +71,4 @@ feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
 feature.no-minification             true
 feature.no-cache                    true
+feature.tasks-pdf-export            true
