--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -19,3 +19,4 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 false
 feature.preview                     false
 feature.louhipalvelin               false
+feature.tasks-pdf-export            false
