--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -27,3 +27,4 @@ feature.louhipalvelin               true
 feature.dummy-krysp                 true
 feature.nrepl                       true
 feature.dummy-onnistuu              true
+feature.tasks-pdf-export            false
