Added libreoffice pdf/a converter for päätösote file import. Enbaled now in dev only.

--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -14,6 +14,9 @@ idf.rakentajafi.send.url http://localhost:8000/api/id-federation
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
+#Commenting out libreoffice url variable disables the feature
+#libreoffice.url                     http://office1-qa.lupapiste.fi:8001
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
@@ -27,4 +30,4 @@ feature.louhipalvelin               true
 feature.dummy-krysp                 true
 feature.nrepl                       true
 feature.dummy-onnistuu              true
-feature.tasks-pdf-export            false
+feature.tasks-pdf-export            true
