--- a/resources/test.properties
+++ b/resources/test.properties
@@ -11,6 +11,9 @@ mml.yhteystiedot.uri-template    http://localhost:8000/dev/mml/yhteystiedot-LU.x
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
+#Commenting out libreoffice url variable disables the feature
+#libreoffice.url                     http://office1-test.lupapiste.fi:8001
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
@@ -24,4 +27,4 @@ feature.louhipalvelin               true
 feature.nrepl                       true
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
-feature.tasks-pdf-export            false
+feature.tasks-pdf-export            true
