Use the same properties that are generated by chef

--- a/lupapiste.properties
+++ b/lupapiste.properties
@@ -25,8 +25,8 @@ ssl.key-password          lupapiste
 geoserver.host            http://localhost
 
 # Blank url disables the feature
-#libreoffice.url          http://localhost:8001
-
+#libreoffice.host          localhost
+libreoffice.port          8001
 
 redirect-after-logout.fi     /
 redirect-after-logout.sv     /sv
