--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -37,9 +37,6 @@ onnistuu.return-base-url     https://www-dev.lupapiste.fi
 # File server address needed by krysp itest
 fileserver-address  sftp://sftp-dev.lupapiste.fi
 
-#Commenting out libreoffice url variable disables the feature
-libreoffice.url                     http://office1-dev.lupapiste.fi:8001
-
 # feature flags
 feature.animations                  false
 feature.pima                        true
@@ -47,7 +44,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.preview                     true
-feature.louhipalvelin               true
+feature.libreoffice                 true
 
 # for delicious live coding
 feature.nrepl                       true
