--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -14,9 +14,6 @@ idf.rakentajafi.send.url http://localhost:8000/api/id-federation
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
-#Commenting out libreoffice url variable disables the feature
-#libreoffice.url                     http://office1-qa.lupapiste.fi:8001
-
 # feature flags
 feature.animations                  true
 feature.pima                        true
@@ -24,7 +21,7 @@ feature.reminders                   false
 feature.automatic-verdicts-checking false
 feature.arkistointi                 true
 feature.preview                     true
-feature.louhipalvelin               true
+feature.libreoffice                 false
 
 # dev features
 feature.dummy-krysp                 true
