--- a/resources/test.properties
+++ b/resources/test.properties
@@ -11,9 +11,6 @@ mml.yhteystiedot.uri-template    http://localhost:8000/dev/mml/yhteystiedot-LU.x
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
-#Commenting out libreoffice url variable disables the feature
-libreoffice.url                     http://office1-test.lupapiste.fi:8001
-
 # feature flags
 feature.animations                  true
 feature.pima                        true
@@ -21,7 +18,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.preview                     true
-feature.louhipalvelin               true
+feature.libreoffice                 true
 
 # for delicious live coding
 feature.nrepl                       true
