libre setting for all envs

--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -11,6 +11,8 @@ mml.yhteystiedot.uri-template    https://ktjws.nls.fi/ktjkir/kysely/yhteystiedot
 # Identity federation partners
 idf.rakentajafi.send.url http://www.rakentaja.fi/suorakanava/vastaanota.aspx
 
+libreoffice.host office1.lupapiste.fi
+
 # feature flags
 feature.animations                  true
 feature.pima                        false
