--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -14,6 +14,8 @@ idf.rakentajafi.send.url http://localhost:8000/api/id-federation
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
+libreoffice.host office1-qa.lupapiste.fi
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
