--- a/resources/local.properties
+++ b/resources/local.properties
@@ -53,6 +53,8 @@ fileserver-address    sftp://localhost
 onnistuu.post-to           http://localhost:8000/dev/dummy-onnistuu
 onnistuu.return-base-url   http://localhost:8000
 
+libreoffice.host localhost
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
