--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -4,3 +4,4 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d %p [%c] - <%m>%n
 log4j.logger.ontodev.excel=WARN
 log4j.logger.org.mongodb.driver=WARN
+log4j.logger.org.apache.pdfbox=ERROR
