Libre office converter should not be enabled in default local.properties.
Use user.properties for this if you really want to run it locally.

--- a/resources/local.properties
+++ b/resources/local.properties
@@ -53,8 +53,6 @@ fileserver-address    sftp://localhost
 onnistuu.post-to           http://localhost:8000/dev/dummy-onnistuu
 onnistuu.return-base-url   http://localhost:8000
 
-libreoffice.host localhost
-
 # feature flags
 feature.animations                  true
 feature.pima                        true
@@ -62,7 +60,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.preview                     true
-feature.libreoffice                 true
+feature.libreoffice                 false
 
 # for delicious live coding
 feature.disable-anti-csrf           false
