FIX for failing test due schema validation

--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -20,7 +20,7 @@ feature.pima                        true
 feature.reminders                   false
 feature.automatic-verdicts-checking false
 feature.arkistointi                 true
-feature.libreoffice                 false
+feature.libreoffice                 true
 
 # dev features
 feature.dummy-krysp                 true
