Added Hystrix for latency and monitoring but without fault tolerance.

--- a/resources/local.properties
+++ b/resources/local.properties
@@ -59,7 +59,7 @@ feature.pima                        true
 feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
-feature.libreoffice                 false
+feature.libreoffice                 true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
