add feature flag for document identifier

--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -19,3 +19,4 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 false
 feature.libreoffice                 false
 feature.tasks-pdf-export            false
+feature.document-identifier         false
