--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -44,6 +44,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
+feature.document-identifier         true
 
 # for delicious live coding
 feature.nrepl                       true
