--- a/resources/local.properties
+++ b/resources/local.properties
@@ -60,6 +60,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 false
+feature.document-identifier         true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
