--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -21,6 +21,7 @@ feature.reminders                   false
 feature.automatic-verdicts-checking false
 feature.arkistointi                 true
 feature.libreoffice                 true
+feature.document-identifier         true
 
 # dev features
 feature.dummy-krysp                 true
