--- a/resources/local.properties
+++ b/resources/local.properties
@@ -53,7 +53,7 @@ fileserver-address    sftp://localhost
 onnistuu.post-to           http://localhost:8000/dev/dummy-onnistuu
 onnistuu.return-base-url   http://localhost:8000
 
-arkisto.host       http://localhost:8012
+arkisto.host       http://localhost:8012/onkalo
 arkisto.app-id     abcdefg
 arkisto.app-key    12356afbsb
 
