--- a/.jshintrc
+++ b/.jshintrc
@@ -40,6 +40,7 @@
     "docvars": true,
     "DocModel" : true,
     "error": true,
+	"externalApiTools" : true,
     "features": true,
     "ga": true,
     "getEvent": true,
@@ -78,7 +79,8 @@
      ["accordion","AccordionState","ajax","attachment",
       "attachmentUtils","attachmentTypeSelect",
        "authorization","comments","currentUser",
-       "DocModel","docgen","expand", "features",
+       "docvars", "DocModel","docgen",
+	   "expand", "externalApiTools", "features",
        "ga","gis","getEvent","hub","invites","loc",
        "locationSearch","vetuma","notify",
        "trace","debug","info","warn","error",
