allow functions to be referenced before they are declared

--- a/.jshintrc
+++ b/.jshintrc
@@ -8,7 +8,7 @@
   "futurehostile":true,
   "immed": true,
   "indent": 2,
-  "latedef": true,
+  "latedef": "nofunc",
   "newcap": true,
   "noarg": true,
   "nonbsp": true,
@@ -16,9 +16,9 @@
   "nonew": true,
   "notypeof":true,
   "quotmark": "double",
-  "undef": true,
   "strict": true,
   "trailing": true,
+  "undef": true,
   "unused": true,
   "eqnull": true,
   "browser": true,
