--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -17,5 +17,5 @@ feature.pima                        false
 feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 false
-feature.libreoffice                 true
+feature.libreoffice                 false
 feature.tasks-pdf-export            false
