updated-attachments feature flag

--- a/resources/local.properties
+++ b/resources/local.properties
@@ -64,6 +64,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 false
+feature.updated-attachments         true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
