--- a/resources/test.properties
+++ b/resources/test.properties
@@ -18,6 +18,7 @@ feature.reminders                   true
 feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
+feature.updated-attachments         true
 
 # for delicious live coding
 feature.nrepl                       true
