prefix Lupa ids with "9" if feature is set

--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -37,6 +37,9 @@ onnistuu.return-base-url     https://www-dev.lupapiste.fi
 # File server address needed by krysp itest
 fileserver-address  sftp://sftp-dev.lupapiste.fi
 
+# LP ids get prefix (LP-XXX-YEAR-00001 -> LP-XXX-YEAR-90001)
+feature.prefixed-id   true
+
 # feature flags
 feature.animations                  false
 feature.pima                        true
