--- a/resources/test.properties
+++ b/resources/test.properties
@@ -11,6 +11,9 @@ mml.yhteystiedot.uri-template    http://localhost:8000/dev/mml/yhteystiedot-LU.x
 # No TLS/SLL certificate validation
 http-client.insecure?   true
 
+# LP ids get prefix (LP-XXX-YEAR-00001 -> LP-XXX-YEAR-90001)
+feature.prefixed-id   true
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
