--- a/resources/local.properties
+++ b/resources/local.properties
@@ -57,6 +57,9 @@ arkisto.host       http://localhost:8012/onkalo
 arkisto.app-id     abcdefg
 arkisto.app-key    12356afbsb
 
+# LP ids get prefix (LP-XXX-YEAR-00001 -> LP-XXX-YEAR-90001)
+feature.prefixed-id   true
+
 # feature flags
 feature.animations                  true
 feature.pima                        true
