change log level for org.apache.pdfbox.pdmodel.graphics.xobject.PDPixelMap to FATAL

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -5,3 +5,4 @@ log4j.appender.A1.layout.ConversionPattern=%d %p [%c] - <%m>%n
 log4j.logger.ontodev.excel=WARN
 log4j.logger.org.mongodb.driver=WARN
 log4j.logger.org.apache.pdfbox=ERROR
+log4j.logger.org.apache.pdfbox.pdmodel.graphics.xobject.PDPixelMap=FATAL
