--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -21,7 +21,7 @@ feature.prefixed-id   true
 feature.animations                  true
 feature.pima                        true
 feature.reminders                   false
-feature.automatic-verdicts-checking false
+feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
