--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -16,7 +16,7 @@ feature.animations                  true
 feature.pima                        false
 feature.reminders                   true
 feature.automatic-verdicts-checking true
-feature.arkistointi                 false
+feature.arkistointi                 true
 feature.libreoffice                 true
 feature.tasks-pdf-export            false
 feature.updated-attachments         false
