--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -19,4 +19,4 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.tasks-pdf-export            false
-feature.updated-attachments         false
+feature.updated-attachments         true
