--- a/.jshintrc
+++ b/.jshintrc
@@ -37,7 +37,7 @@
     "currentUser": true,
     "debug": true,
     "docgen": true,
-    "docvars": true,
+    "docutils": true,
     "DocModel" : true,
     "error": true,
 	"externalApiTools" : true,
@@ -79,7 +79,7 @@
      ["accordion","AccordionState","ajax","attachment",
       "attachmentUtils","attachmentTypeSelect",
        "authorization","comments","currentUser",
-       "docvars", "DocModel","docgen",
+       "docutils", "DocModel","docgen",
 	   "expand", "externalApiTools", "features",
        "ga","gis","getEvent","hub","invites","loc",
        "locationSearch","vetuma","notify",
