Verdict PDF gated behind feature flag.

--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -20,3 +20,4 @@ feature.arkistointi                 true
 feature.libreoffice                 true
 feature.tasks-pdf-export            false
 feature.updated-attachments         true
+feature.paatos-pdfa                 false
