Verdict PDF gated behind feature flag.

--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -31,3 +31,5 @@ feature.review-done                 false
 feature.dummy-krysp                 true
 feature.nrepl                       true
 feature.dummy-onnistuu              true
+feature.tasks-pdf-export            true
+feature.paatos-pdfa                 true
