--- a/resources/test.properties
+++ b/resources/test.properties
@@ -28,3 +28,5 @@ feature.review-done                 true
 feature.nrepl                       true
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
+feature.tasks-pdf-export            true
+feature.paatos-pdfa                 true
