--- a/resources/local.properties
+++ b/resources/local.properties
@@ -79,3 +79,5 @@ feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
 feature.no-minification             true
 feature.no-cache                    true
+feature.tasks-pdf-export            true
+feature.paatos-pdfa                 false
