--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -19,4 +19,5 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
+feature.paatos-pdfa                 false
 feature.review-done                 false
