Localization and flag for "review done" feature

--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -48,6 +48,7 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
+feature.review-done                 true
 
 # for delicious live coding
 feature.nrepl                       true
