--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -20,3 +20,4 @@ feature.arkistointi                 true
 feature.libreoffice                 true
 feature.tasks-pdf-export            true
 feature.updated-attachments         true
+feature.review-done                 false
