--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -25,9 +25,10 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
+feature.tasks-pdf-export            true
+feature.review-done                 false
 
 # dev features
 feature.dummy-krysp                 true
 feature.nrepl                       true
 feature.dummy-onnistuu              true
-feature.tasks-pdf-export            true
