--- a/resources/local.properties
+++ b/resources/local.properties
@@ -68,6 +68,8 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 false
 feature.updated-attachments         true
+feature.tasks-pdf-export            true
+feature.review-done                 true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
@@ -78,4 +80,3 @@ feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
 feature.no-minification             true
 feature.no-cache                    true
-feature.tasks-pdf-export            true
