--- a/resources/test.properties
+++ b/resources/test.properties
@@ -22,9 +22,10 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
+feature.tasks-pdf-export            true
+feature.review-done                 true
 
 # for delicious live coding
 feature.nrepl                       true
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
-feature.tasks-pdf-export            true
