enable feature for demo

--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -25,7 +25,7 @@ feature.automatic-verdicts-checking true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
-feature.review-done                 false
+feature.review-done                 true
 
 # dev features
 feature.dummy-krysp                 true
