Add feature flag for tos function correction

--- a/resources/qa.properties
+++ b/resources/qa.properties
@@ -26,6 +26,7 @@ feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
 feature.review-done                 true
+feature.tos-function-correction     true
 
 # dev features
 feature.dummy-krysp                 true
