--- a/resources/local.properties
+++ b/resources/local.properties
@@ -69,6 +69,7 @@ feature.arkistointi                 true
 feature.libreoffice                 false
 feature.updated-attachments         true
 feature.review-done                 true
+feature.tos-function-correction     true
 
 # for delicious live coding
 feature.disable-anti-csrf           false
