--- a/resources/prod.properties
+++ b/resources/prod.properties
@@ -21,3 +21,4 @@ feature.libreoffice                 true
 feature.updated-attachments         true
 feature.paatos-pdfa                 false
 feature.review-done                 false
+feature.tos-function-correction     false
