--- a/resources/test.properties
+++ b/resources/test.properties
@@ -23,6 +23,7 @@ feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
 feature.review-done                 true
+feature.tos-function-correction     true
 
 # for delicious live coding
 feature.nrepl                       true
