--- a/resources/local.properties
+++ b/resources/local.properties
@@ -65,7 +65,7 @@ feature.animations                  true
 feature.pima                        true
 feature.reminders                   true
 feature.arkistointi                 true
-feature.libreoffice                 false
+feature.libreoffice                 true
 feature.updated-attachments         true
 
 # for delicious live coding
