--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -47,6 +47,7 @@ feature.reminders                   true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
+feature.ajanvaraus                  false
 
 # for delicious live coding
 feature.nrepl                       true
