Changed onnistuu.fi success email

--- a/resources/lupapiste.properties
+++ b/resources/lupapiste.properties
@@ -60,7 +60,7 @@ onnistuu.post-to      https://www.onnistuu.fi/external/entry/
 #onnistuu.crypto-key   (set by Chef)
 onnistuu.timeout      3600
 
-onnistuu.success.email tuki@lupapiste.fi
+onnistuu.success.email paula.vahtola@solita.fi
 
 #backing-system.crypto-key    (set by Chef)
 
