--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -47,7 +47,7 @@ feature.reminders                   true
 feature.arkistointi                 true
 feature.libreoffice                 true
 feature.updated-attachments         true
-feature.ajanvaraus                  false
+feature.ajanvaraus                  true
 
 # for delicious live coding
 feature.nrepl                       true
