itests for calendar api. enabled ajanvaraus in dev environment.

--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -55,3 +55,7 @@ feature.disable-ktj-on-create       false
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
 email.dummy-server                  true
+
+ajanvaraus.host     http://varaus-app1-dev.lupapiste.fi:8099
+ajanvaraus.username api1
+ajanvaraus.password api1
