paatos-pdfa   feature on in dev profile

--- a/resources/dev.properties
+++ b/resources/dev.properties
@@ -54,3 +54,5 @@ feature.disable-ktj-on-create       false
 feature.dummy-krysp                 true
 feature.dummy-onnistuu              true
 email.dummy-server                  true
+
+feature.paatos-pdfa                 true
